2010-06-06  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #1294: movie param of flash object not processed by prefixResourcePath (Thanks to Jigal van Hemert)

2010-06-06  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14632: Caching framework memcached backend: No exception thrown if set() fails and wrong boolean comparison
	* Fixed bug #14631: Caching framework memcached backend: Wrong memcache server detection in unit tests
	* Follow-up to #11386: Caching framework file backend does not return absolute path in getCacheDirectory()
	* Fixed bug #14455: [Performance] Wrong variable in t3lib_cache_memcachedbackend leads to redundant data (Thanks to Dan Osipov)

2010-06-04  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14615: Autosuggest function doesn't work with quotes

2010-06-04  Susanne Moog  <typo3@susannemoog.de>

	* Fixed bug #13818: tcemain versionSwap might break pages_language_overlay relations (thanks to Tolleiv Nietsch)
	
2010-06-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14130: Switching pages with browsebox doesn't work (thanks to Mark Kuiphuis)

2010-06-02  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13506: [felogin] Function changePassword does not work, when hitting 'enter' in change password form (Thanks to Christian Futterlieb)

2010-05-31  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13701: @ini_set() works only on windows, on some unices it could render the function unusable (Thanks to Stephan Seitz)

2010-05-31  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #13858: IS cannot not index files if absRefPrefix is set and indexExternalURLs is not (thanks to Christian Kuhn and Steffen Ritter for help)

2010-05-28  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13636: sysext:version needs doNotLoadInFE => 0 (Thanks to Georg Ringer)
	* Fixed bug #13160: Datepicker doesn't work with IE8 in French (Thanks to Alexandre Gravel-Raymond)

2010-05-27  Xavier Perseguers  <typo3@perseguers.ch>
